# hydroguide

./: .gitattributes  .gitignore  .secrets  AGENTS.md  CLAUDE.md  CODEX.md  DESIGN.md  README.md  REFERENCE_DO-NOT-TOUCH_Komponentliste.html
.ai/: agent-worklog.md  understand-systemkart.md
.ai/specs/: 2026-05-03-commit-tree-cleanup-design.md
.githooks/: commit-msg  post-commit  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  cloudflare-workers.yml  (+5 more)
.playwright-cli/: page-2026-05-12T22-47-23-915Z.yml
.understand-anything/: .understandignore
backend/: _middleware.js
docs/: ai-dokumentasjon.md  ai-rapport.md  ai-strategi-dokumentasjon.md  ai-strategi.md  arkitektur-dokumentasjon.md  arkitektur.md  backend-dokumentasjon.md  cloudflare-dokumentasjon.md  frontend-dokumentasjon.md  frontend.md  ki-dokumentasjon.md  onboarding.md  sikkerheit-dokumentasjon.md  sikkerheit.md  system-dokumentasjon.md  utvikling-dokumentasjon.md  utvikling.md
frontend/: index.html  knip.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
private/: api-keys.md  context.md  data.json  known-bad-ids.json  notes.md  protocol.md  setup.md  skill-policy.md  style.md  worklog.md
tools/: check-hidden-fields.mjs  horizon_pdf.py  solar_position_pdf.py
tools/minstevann/: README.md  flow_questionnaire.py  pyproject.toml  run.py  tests.py
tools/minstevann/scripts/: convert_minimumflow_to_perioder.py
tools/minstevann/src/: assembly.py  llm.py  minimumflow_db.py  models.py  pdf.py  pdf_preparse.py  report.py  scraper.py  snippet.py
(+200 files in other folders)
