[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroguide-minstevann"
version = "0.1.0"
description = "HydroGuide minstevannforing extraction pipeline"
requires-python = ">=3.13"
dependencies = [
  "opendataloader-pdf[hybrid]>=2.2.1,<3",
]

[tool.setuptools]
packages = ["src"]
